@@ -38,6 +38,12 @@ Version 1.7.2
        "show only affected paths" is active. (Stefan)
 - CHG: Issue #134: Show cached overlays
        for blocked paths. (Stefan)
+- BUG: Issue #136: SubWCRev can use wrong
+       casing for relative paths. (Stefan)
+- BUG: Issue #108: log dialog uses wrong
+       file if sorted. (Stefan)
+- BUG: Issue #137: overlays don't propagate from
+       externals to their parent folders. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
